--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,16 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "@/components/*": ["src/app/shared/components/*"],
+      "@/features/*": ["src/app/features/*"],
+      "@/core/*": ["src/app/core/*"],
+      "@/services/*": ["src/app/core/services/*"],
+      "@/models/*": ["src/app/core/models/*"]
+    },
+
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
@@ -19,10 +29,7 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
